--- a/_patterns/banner/banner.css
+++ b/_patterns/banner/banner.css
@@ -23,6 +23,23 @@
   background-color: red;
 }
 
+.sales-banner {
+  background-color: red;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.sales-banner h1{
+  margin-bottom: 0;
+  color: white;
+  font-size: 2.5rem;
+}
+
+.sales-banner-tag {
+  text-decoration: none;
+}
+
 @media only screen and (min-width: 20em) {
 
   .word {
