--- a/_patterns/cards/card.css
+++ b/_patterns/cards/card.css
@@ -44,5 +44,11 @@
 }
 
 .product-card {
-  max-width: 25em;
+  text-decoration: none;
+  color: black;
+}
+
+.product-card:hover {
+  background-color: black;
+  color: white;
 }
