Changed product page for product details

--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
-<h1>{{page.name}}</h1>
-<p>{{page.description}}</p>
-<img src="{{page.image}}" alt="">
+{% pattern banner/sales-banner %}
+
+{% pattern sections/product-details %}
+
+{% pattern sections/return-policy %}
