--- a/_patterns/banner/banner.css
+++ b/_patterns/banner/banner.css
@@ -6,12 +6,20 @@
 .mainbanner {
   margin-top: 30px;
   text-align: center;
-  font-family: sans-serif;
+  font-family: 'Open sans' sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 65em;
+  width: 100%;
 }
 
 .word h2 {
-  margin-top: 20px;
+  margin-top: .5rem;
   margin-bottom: 5px;
+}
+
+.word p{
+  margin-bottom: .5rem;
 }
 
 .call {
@@ -38,6 +46,16 @@
 
 .sales-banner-tag {
   text-decoration: none;
+}
+
+.newsletter {
+  background-color: red;
+  padding: 1rem 0;
+  color: white;
+}
+
+.newsletter h2 {
+  margin-bottom: 0;
 }
 
 @media only screen and (min-width: 20em) {
