--- a/_patterns/sections/sections.css
+++ b/_patterns/sections/sections.css
@@ -33,6 +33,29 @@
   margin-bottom: .5rem;
 }
 
+.terms {
+  padding: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 40em;
+  width: 100%;
+}
+
+.terms p {
+  font-size: .75rem;
+}
+
+.terms h2 {
+  font-size: .85rem;
+  margin-bottom: .5rem;
+}
+
+
+.terms h1 {
+  font-size: 1.1rem;
+  margin-bottom: .5rem;
+}
+
 .first {
   padding-top: 1.3rem;
 }
