--- a/_patterns/sections/sections.css
+++ b/_patterns/sections/sections.css
@@ -66,6 +66,14 @@
   padding-bottom: 1.3rem;
 }
 
+.tables {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 60em;
+  width: 100%;
+  margin-top: 1rem;
+}
+
 @media only screen and (min-width: 60em) {
 
   .checkout {
